# open

./: .gitignore  .gitmodules  ADD.py  BFMatcher.py  BUILD.md  CMakeLists.txt  FLANN.py  GaussianBlur.py  Harris.py  auto-commit.sh  canny.py  capvideo.py  cars1.py  cars2.py  commit-push.sh  contours.py  contours1.py  draw.py  erode.py  image ADD.py  img_stitch.py  sift and surf.py  sift.py  sobel.py  stitch.py  trackbar.py
AItest/: README.md  requirements.txt
AItest/src/: __init__.py  main.py
AItest/src/core/: __init__.py  image_detector.py  video_detector.py  yolo_demo.py
AItest/src/utils/: download_image.py
WebGPU/: index.html
c++test/: test  test.cpp
c++test/test.dSYM/Contents/Resources/DWARF/: test
c++test/test.dSYM/Contents/Resources/Relocations/aarch64/: test.yml
golong/: array.go  factorial.go  for.go  func.go  map.go  switch.go
js/: README.md  index.js  package-lock.json  package.json
js/examples/: batch.js  color.js  simple.js
openCV/: Numpy test.py  Tomasi.py  adapbinary.py  add.py  binary.py  bitwise.py  canny.py  cars.py  cars2.py  contours.py  contours1.py  convert color.py  creat image.py  download_test_faces.py  erode.py  face_detection.py  filter.py  image ADD.py  img_stitch.py  perspective.py  splitmerge.py  stitch.py  test1.py  test2.py  usermat.py  video2.py
python-algo/: env_test.py  k-Nearest Neighbors.py
pytorch/: test.py  test1.py  transpose.py
src/: TextProcessor.cpp  TextProcessor.hpp  app.cpp  main.cpp  opencctest.cpp  test.cpp
src/C++/: namespace.cpp
swift/: func.swift  funcType.swift  if.swift  luoji.swift  sorted.swift  switch.swift  test.swift
test/: aa.py  affine.py  affine1.py  converter.py  mouse.py  mousedrawshape.py  mousedrawshape1.py  scale.py  sobel.py  stitch2.py  test.py  test1.py  testop.py  video.py
vscode-namespace-checker/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json  vscode-namespace-checker-1.0.0.vsix
vscode-namespace-checker/src/: extension.ts
webnotebook/: index.html  script.js  style.css
